adding exercise files in progress

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-  <article id="container"></article>
+  <article class="politician">
+    <header class="politician__name"></header>
+    <section class="politician__bills"></section>
+    <section class="politician__influencers"></section>
+  </article>
+  
 </body>
 
 </html>
